WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66216
REGRESSION(
r70598
): [Chromium] Style changes in textInput event can prevent from updating <textarea> value.
https://bugs.webkit.org/show_bug.cgi?id=66216
Summary
REGRESSION(r70598): [Chromium] Style changes in textInput event can prevent f...
Hajime Morrita
Reported
2011-08-15 02:10:31 PDT
Created
attachment 103895
[details]
A reduction. From
http://code.google.com/p/chromium/issues/detail?id=89647
How to repro: - Open attached html - Focus the text area - Type something Typed text should appear but doesn't.
Attachments
A reduction.
(236 bytes, text/html)
2011-08-15 02:10 PDT
,
Hajime Morrita
no flags
Details
Patch
(4.44 KB, patch)
2011-08-15 04:12 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(4.73 KB, patch)
2011-08-15 23:00 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2011-08-15 04:12:51 PDT
Created
attachment 103900
[details]
Patch
Hajime Morrita
Comment 2
2011-08-15 04:17:55 PDT
This is a kind of bandaid fix. Although an ideal prevention for this kind of error is to deploy many invariant assertions, that is another, tough story...
Ryosuke Niwa
Comment 3
2011-08-15 21:44:52 PDT
Comment on
attachment 103900
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=103900&action=review
> LayoutTests/editing/input/style-change-during-input-expected.txt:5 > +PASS successfullyParsed is true > + > +TEST COMPLETE > +PASS window.target.value is "hello"
The order of these lines will be fixed if you make the following changes
> LayoutTests/editing/input/style-change-during-input.html:26 > + layoutTestController.notifyDone();
Call finishJSTest instead here.
> LayoutTests/editing/input/style-change-during-input.html:30 > +successfullyParsed = true;
You should set window.jsTestIsAsync = true instead.
> Source/WebCore/ChangeLog:11 > + dirty. But that is problematic since the editing code assumes > + style staying clean during sellchecking phase.
Please elaborate more before you land; e.g. HTMLTextAreaElement's shadow DOM is re-created, etc...
Hajime Morrita
Comment 4
2011-08-15 23:00:55 PDT
Created
attachment 104009
[details]
Patch
Ryosuke Niwa
Comment 5
2011-08-15 23:05:21 PDT
Comment on
attachment 104009
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=104009&action=review
> LayoutTests/editing/input/style-change-during-input-expected.txt:3 > +PASS window.target.value is "hello"
No blank line here?
WebKit Review Bot
Comment 6
2011-08-16 00:00:59 PDT
Comment on
attachment 104009
[details]
Patch Clearing flags on attachment: 104009 Committed
r93087
: <
http://trac.webkit.org/changeset/93087
>
Ryosuke Niwa
Comment 7
2011-09-15 11:17:47 PDT
This bug has been fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug