REGRESSION(r70598): [Chromium] Style changes in textInput event can prevent from updating <textarea> value. https://bugs.webkit.org/show_bug.cgi?id=66216

Reviewed by Ryosuke Niwa.

Source/WebCore:

Element::spellcheckAttributeState() uses Element::hasAttribute(),
which calls updateStyleAttribute(), which potentially makes style
dirty. But that is problematic since Editor calls spellcheckAttributeState()
during the spell-checking phase and make the style dirty,
which can trigger re-layout, which wipes the shadow tree of a textarea
out by pre-committed "value" text.

This change removes the hasAttribute() call from
spellcheckAttributeState().

Test: editing/input/style-change-during-input.html

* dom/Element.cpp:
(WebCore::Element::spellcheckAttributeState):

LayoutTests:

* editing/input/style-change-during-input-expected.txt: Added.
* editing/input/style-change-during-input.html: Added.


Canonical link: https://commits.webkit.org/82101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93087 268f45cc-cd09-0410-ab3c-d52691b4dbfc